<resources>
    <string name="app_name">AMazeByJanelleKrupicka</string>
    <string name="explore_maze">Explore</string>
    <string name="short_cut">Shortcut</string>
    <string name="go2winning">Go2Winning</string>
    <string name="go2losing">Go2Losing</string>
    <string name="congrats_winning">Congratulations! You won the Secret Garden Maze.</string>
    <string name="welcome">Welcome to the Secret Garden Maze!</string>
    <string name="losing_message">Sorry! You lost.</string>
    <string name="rooms_toggle">Build maze with rooms</string>
    <string name="gen_algorithm">Set maze generation algorithm</string>
    <string name="skill_level">Set maze difficulty</string>
    <string name="revist">Revist</string>
    <string name="robot_type">Robot type:</string>
    <string name="driver">Driver type:</string>
    <string name="forward_arrow">Forward</string>
    <string name="left_arrow">Left</string>
    <string name="right_arrow">Right</string>
    <string name="map_scale">Map scale</string>
    <string name="map_scale_increse">+</string>
    <string name="map_scale_decrease">-</string>
    <string name="loading_message">Loading Secret Garden Maze...</string>
    <string name="animation_speed">Animation speed</string>
    <string name="energy_level">Energy level</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="sensor_forward">Sensor Forward</string>
    <string name="sensor_backward">Sensor Backward</string>
    <string name="sensor_left">Sensor Left</string>
    <string name="sensor_right">Sensor Right</string>
    <string name="return_message">Select the arrow in the upper left corner to restart the game.</string>
    <string name="path_length">Path length taken: </string>
    <string name="shortest_path_length">Shortest possible path length: </string>
    <string name="robot_end_energy">Amount of energy consumed: </string>
    <string name="reason_for_robot_stopping"> </string>
    <string name="show_map">Turn map on/off</string>
    <string name="show_solution">Turn solution on/off</string>
    <string name="show_walls">Turn visible walls on/off</string>
</resources>