<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mossy_background"
    tools:context="edu.wm.cs.cs301.janellekrupicka.gui.PlayManuallyActivity">

    <!-- <Button
        android:id="@+id/short_cut"
        android:layout_width="210dp"
        android:layout_height="155dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@color/sage_green"
        android:onClick="shortCut"
        android:text="@string/short_cut"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/forwardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_walls" /> -->

    <view
        android:id="@+id/maze_panel"
        class="edu.wm.cs.cs301.janellekrupicka.gui.MazePanel"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="144dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/forwardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_walls" />

    <Switch
        android:id="@+id/show_map"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/show_map"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/show_solution"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="104dp"
        android:background="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/show_solution"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/show_walls"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:background="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/show_walls"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_map" />

    <Button
        android:id="@+id/increase_scale"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="438dp"
        android:backgroundTint="@color/sage_green"
        android:onClick="increaseMapScale"
        android:text="@string/map_scale_increse"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decrease_scale"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decrease_scale"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/sage_green"
        android:onClick="decreaseMapScale"
        android:text="@string/map_scale_decrease"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/map_scale"
        app:layout_constraintTop_toBottomOf="@+id/show_solution" />

    <TextView
        android:id="@+id/map_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/map_scale"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/show_walls"
        app:layout_constraintTop_toBottomOf="@+id/show_solution" />

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_width="125dp"
        android:layout_height="102dp"
        android:layout_marginTop="497dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/forward_arrow"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="moveForward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        app:srcCompat="@drawable/forward_arrow" />

    <ImageButton
        android:id="@+id/leftButton"
        android:layout_width="117dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/left_arrow"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="turnLeft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forwardButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <ImageButton
        android:id="@+id/rightButton"
        android:layout_width="118dp"
        android:layout_height="141dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/right_arrow"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="turnRight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/forwardButton"
        app:srcCompat="@drawable/right_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>