<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/door_background"
    tools:context="edu.wm.cs.cs301.janellekrupicka.gui.AMazeActivity">

    <Button
        android:id="@+id/explore"
        android:layout_width="142dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/sage_green"
        android:fontFamily="cursive"
        android:onClick="exploreMaze"
        android:text="@string/explore_maze"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="207dp"
        android:layout_height="61dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="50dp"
        android:background="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/skill_level"
        android:layout_width="217dp"
        android:layout_height="64dp"
        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/sage_green"
        android:progressBackgroundTint="@color/sage_green"
        android:progressTint="@color/dark_green"
        android:visibility="visible"
        android:max="9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/rooms"
        android:layout_width="228dp"
        android:layout_height="88dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="125dp"
        android:background="@color/white"
        android:backgroundTint="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/rooms_toggle"
        android:textColor="@color/black"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_level"
        app:layout_constraintVertical_bias="0.495" />

    <Spinner
        android:id="@+id/maze_gen_alg"
        android:layout_width="133dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="27dp"
        android:background="@color/white"
        android:backgroundTint="@color/sage_green"
        android:entries="@array/maze_generation_alg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/set_gen_alg"
        app:layout_constraintTop_toBottomOf="@+id/rooms"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/set_gen_alg"
        android:layout_width="102dp"
        android:layout_height="53dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="49dp"
        android:background="@color/white"
        android:backgroundTint="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/gen_algorithm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rooms"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/set_skill_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:background="@color/sage_green"
        android:fontFamily="cursive"
        android:text="@string/skill_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/rooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_level"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/revisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/sage_green"
        android:fontFamily="cursive"
        android:onClick="revisitMaze"
        android:text="@string/revist"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

</androidx.constraintlayout.widget.ConstraintLayout>